--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,34 +1,34 @@
 @font-face {
-  font-family: InterVariable;
+  font-family: "InterVariable";
   font-style: normal;
   font-weight: 100 900;
   font-display: swap;
-  /* https://rsms.me/inter/ */
+  /* https://github.com/rsms/inter */
   src: url("/fonts/InterVariable.woff2") format("woff2");
 }
 
-:root {
+:root,
+:root[data-theme="light"] {
+  color-scheme: light;
+
   --color-background: #f0f0f0;
   --color-text: #1a1a1a;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
+    color-scheme: dark;
+
     --color-background: #1a1a1a;
     --color-text: #f0f0f0;
   }
 }
 
 html {
-  color-scheme: light dark;
   font-family: "InterVariable", system-ui, sans-serif;
   font-optical-sizing: auto;
   background-color: var(--color-background);
   color: var(--color-text);
-}
-
-html.dark {
-  color-scheme: dark;
 }
 
 body {
