--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,11 @@
 ---
-import BaseMeta from "@/components/BaseMeta.astro";
-import websiteConfig from "@/website.config";
-
 import "../styles/reset.css";
 import "../styles/global.css";
+
+import BaseMeta from "@/components/BaseMeta.astro";
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
+import websiteConfig from "@/website.config";
 
 interface Props {
   title: string;
@@ -11,12 +13,8 @@ interface Props {
   ogImage: string;
 }
 
-const { titleDefault, descriptionDefault, author } = websiteConfig;
-const {
-  title = titleDefault,
-  description = descriptionDefault,
-  ogImage,
-} = Astro.props;
+const { author } = websiteConfig;
+const { title, description, ogImage } = Astro.props;
 ---
 
 <html lang="en">
@@ -37,6 +35,12 @@ const {
     />
   </head>
   <body>
-    <slot />
+    <div class="container">
+      <Header />
+      <main>
+        <slot />
+      </main>
+      <Footer />
+    </div>
   </body>
 </html>
