--- a/src/layouts/DemoLayout.astro
+++ b/src/layouts/DemoLayout.astro
@@ -1,7 +1,8 @@
 ---
-import BaseMeta from "@/components/BaseMeta.astro";
+import "@/styles/reset.css";
 
-import "@styles/reset.css";
+import BaseMeta from "@/components/BaseMeta.astro";
+import websiteConfig from "@/website.config";
 
 interface Props {
   title: string;
@@ -11,7 +12,7 @@ interface Props {
 
 const { title, description, ogImage } = Astro.props;
 
-const pageTitle = `${title} | Demo`;
+const pageTitle = `${title} - Demo`;
 ---
 
 <html lang="en">
@@ -20,7 +21,7 @@ const pageTitle = `${title} | Demo`;
       title={pageTitle}
       description={description}
       ogImage={ogImage}
-      ogType="article"
+      author={websiteConfig.author}
     />
   </head>
   <body>
