--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,9 @@
 ---
 import ThemeButton from "./ThemeButton.astro";
+import Navigation from "./Navigation.astro";
 ---
 
-<header><ThemeButton /></header>
+<header class="header">
+  <Navigation />
+  <ThemeButton />
+</header>
