--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,6 +2,6 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Experiments">
-  <h1>Experiments</h1>
+<BaseLayout title="About">
+  <h1>About</h1>
 </BaseLayout>
