--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,13 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-
-const pageTitle = "test";
 ---
 
-<BaseLayout title={pageTitle}>
-  <h1>Astro</h1>
+<BaseLayout title="Just a personal website">
+  <h1>Hello there 👋</h1>
+  <p>
+    I'm Dmitry, a Frontend Developer with over four years of hands-on
+    experience, passionate about client-side development and the broader
+    JavaScript ecosystem. I am actively seeking opportunities to further enhance
+    my skills and expand my knowledge in this dynamic field
+  </p>
 </BaseLayout>
