--- a/src/layouts/DemoLayout.astro
+++ b/src/layouts/DemoLayout.astro
@@ -2,27 +2,19 @@
 import "@/styles/reset.css";
 
 import BaseMeta from "@/components/BaseMeta.astro";
-import websiteConfig from "@/website.config";
 
 interface Props {
   title: string;
-  description: string;
-  ogImage: string;
+  description?: string;
+  ogImage?: string;
 }
 
 const { title, description, ogImage } = Astro.props;
-
-const pageTitle = `${title} - Demo`;
 ---
 
 <html lang="en">
   <head>
-    <BaseMeta
-      title={pageTitle}
-      description={description}
-      ogImage={ogImage}
-      author={websiteConfig.author}
-    />
+    <BaseMeta title={title} description={description} ogImage={ogImage} />
   </head>
   <body>
     <slot />
