--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,8 @@
 ---
-import BaseLayout from "../layouts/Base.astro";
-
-const pageTitle = "404";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
-<BaseLayout pageTitle={pageTitle}>
-  <h1>404</h1>
+<BaseLayout title="Page not found">
+  <h1>404 Error</h1>
+  <p>Page not found</p>
 </BaseLayout>
