--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,9 +1,7 @@
 ---
-import BaseLayout from "../../layouts/Base.astro";
-
-const pageTitle = "test";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title={pageTitle}>
-  <h1>Astro</h1>
+<BaseLayout title="Projects">
+  <h1>Projects</h1>
 </BaseLayout>
