--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
-<BaseLayout title="Just a personal website">
+<BaseLayout title="Personal website">
   <h1>Hello there 👋</h1>
   <p>
     I'm Dmitry, a Frontend Developer with over four years of hands-on
