--- a/src/content/experiments/book/components/Book.astro
+++ b/src/content/experiments/book/components/Book.astro
@@ -1,8 +1,8 @@
 ---
-import "./styles/scene.scss";
-import "./styles/book.scss";
+import "../styles/scene.scss";
+import "../styles/book.scss";
 
-import BookSegments from "./BookSegments.astro";
+import PageSegments from "./PageSegments.astro";
 
 const segments = 8;
 ---
@@ -13,7 +13,7 @@ const segments = 8;
       <div class="shelf-side shelf-side-front"></div>
       <div class="shelf-side shelf-side-top"></div>
     </div>
-    <div class="book" style="--_segments-count: {segments}">
+    <div class="book" style={`--_segments-count: ${segments}`}>
       <div class="book-cover book-cover-wide book-cover-front">
         <div class="book-cover-inner book-cover-inner-front">
           <div class="book-page book-page-turned"></div>
@@ -28,7 +28,7 @@ const segments = 8;
       <div class="book-side book-side-paper book-side-bottom"></div>
       <div class="book-page book-page-stacked">
         <div class="book-page-content"></div>
-        <BookSegments total={segments} />
+        <PageSegments total={segments} />
       </div>
     </div>
     <p class="unsupported">⚠️ Scroll-driven animations are not supported</p>
