--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
 import "@/styles/reset.css";
-import "@/styles/global.css";
+import "@/styles/base.css";
 
+import { ClientRouter } from "astro:transitions";
 import BaseMeta from "@/components/BaseMeta.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
@@ -25,11 +26,12 @@ const { title, description, ogImage } = Astro.props;
       as="font"
       crossorigin
     />
+    <ClientRouter />
   </head>
   <body>
     <div class="container">
       <Header />
-      <main class="content">
+      <main class="content" transition:animate="fade">
         <slot />
       </main>
       <Footer />
