--- a/src/content/experiments/book/components/Book.astro
+++ b/src/content/experiments/book/components/Book.astro
@@ -1,6 +1,5 @@
 ---
-import "../styles/scene.scss";
-import "../styles/book.scss";
+import "../styles/index.scss";
 
 import PageSegments from "./PageSegments.astro";
 
