--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,10 @@
 ---
 import "@/styles/reset.css";
+import "@/styles/theme-toggler.css";
 import "@/styles/base.css";
 
-import { ClientRouter } from "astro:transitions";
 import BaseMeta from "@/components/BaseMeta.astro";
+import ThemeSync from "@/components/ThemeSync.astro";
 import Header from "@/components/Header.astro";
 import Footer from "@/components/Footer.astro";
 
@@ -21,17 +22,17 @@ const { title, description, ogImage } = Astro.props;
     <BaseMeta title={title} description={description} ogImage={ogImage} />
     <link
       rel="preload"
-      href="/fonts/InterVariable.woff2"
+      href="/InterVariable.woff2"
       type="font/woff2"
       as="font"
       crossorigin
     />
-    <ClientRouter />
+    <ThemeSync />
   </head>
   <body>
     <div class="container">
       <Header />
-      <main class="content" transition:animate="fade">
+      <main class="content">
         <slot />
       </main>
       <Footer />
