--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 ---
-import ThemeButton from "./ThemeButton.astro";
+import ThemeToggler from "./ThemeToggler.astro";
 import Navigation from "./Navigation.astro";
 ---
 
 <header class="header">
   <Navigation />
-  <ThemeButton />
+  <ThemeToggler />
 </header>
