--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -1,70 +1,52 @@
-<button
-  class="theme-toggle"
-  type="button"
-  title="Toggle theme"
-  aria-label="Toggle theme"
->
+<button class="theme-toggle" type="button" aria-label="Toggle theme">
   <svg
     xmlns="http://www.w3.org/2000/svg"
     aria-hidden="true"
-    width="1em"
-    height="1em"
     fill="currentColor"
-    stroke-linecap="round"
-    class="theme-toggle__classic"
+    class="theme-toggle__expand icon"
     viewBox="0 0 32 32"
   >
-    <clipPath id="theme-toggle__classic__cutout">
-      <path d="M0-5h30a1 1 0 0 0 9 13v24H0Z"></path>
+    <clipPath id="theme-toggle__expand__cutout">
+      <path d="M0-11h25a1 1 0 0017 13v30H0Z"></path>
     </clipPath>
-    <g clip-path="url(#theme-toggle__classic__cutout)">
-      <circle cx="16" cy="16" r="9.34"></circle>
-      <g stroke="currentColor" stroke-width="1.5">
-        <path d="M16 5.5v-4"></path>
-        <path d="M16 30.5v-4"></path>
-        <path d="M1.5 16h4"></path>
-        <path d="M26.5 16h4"></path>
-        <path d="m23.4 8.6 2.8-2.8"></path>
-        <path d="m5.7 26.3 2.9-2.9"></path>
-        <path d="m5.8 5.8 2.8 2.8"></path>
-        <path d="m23.4 23.4 2.9 2.9"></path>
-      </g>
+    <g clip-path="url(#theme-toggle__expand__cutout)">
+      <circle cx="16" cy="16" r="8.4"></circle>
+      <path
+        d="M18.3 3.2c0 1.3-1 2.3-2.3 2.3s-2.3-1-2.3-2.3S14.7.9 16 .9s2.3 1 2.3 2.3zm-4.6 25.6c0-1.3 1-2.3 2.3-2.3s2.3 1 2.3 2.3-1 2.3-2.3 2.3-2.3-1-2.3-2.3zm15.1-10.5c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zM3.2 13.7c1.3 0 2.3 1 2.3 2.3s-1 2.3-2.3 2.3S.9 17.3.9 16s1-2.3 2.3-2.3zm5.8-7C9 7.9 7.9 9 6.7 9S4.4 8 4.4 6.7s1-2.3 2.3-2.3S9 5.4 9 6.7zm16.3 21c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zm2.4-21c0 1.3-1 2.3-2.3 2.3S23 7.9 23 6.7s1-2.3 2.3-2.3 2.4 1 2.4 2.3zM6.7 23C8 23 9 24 9 25.3s-1 2.3-2.3 2.3-2.3-1-2.3-2.3 1-2.3 2.3-2.3z"
+      ></path>
     </g>
   </svg>
 </button>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const toggle = document.querySelector(".theme-toggle") as HTMLButtonElement;
-    const root = document.documentElement;
+  const root = document.documentElement;
+  const toggle = document.querySelector(".theme-toggle") as HTMLButtonElement;
+
+  const toggleClassName = (isDark: boolean) => {
     const toggledClass = "theme-toggle--toggled";
 
-    if (getCurrentTheme() === "dark") {
+    if (isDark) {
       toggle.classList.add(toggledClass);
+    } else {
+      toggle.classList.remove(toggledClass);
     }
+  };
 
-    toggle.addEventListener("click", () => {
-      const currentTheme = getCurrentTheme();
-      const nextTheme = currentTheme === "light" ? "dark" : "light";
+  toggleClassName(getCurrentTheme() === "dark");
 
-      localStorage.setItem("theme", nextTheme);
-      root.setAttribute("data-theme", nextTheme);
+  toggle.addEventListener("click", () => {
+    const currentTheme = getCurrentTheme();
+    const nextTheme = currentTheme === "light" ? "dark" : "light";
 
-      if (nextTheme === "dark") {
-        toggle.classList.add(toggledClass);
-      } else {
-        toggle.classList.remove(toggledClass);
-      }
-    });
+    localStorage.setItem("theme", nextTheme);
+    root.setAttribute("data-theme", nextTheme);
 
-    window
-      .matchMedia("(prefers-color-scheme: dark)")
-      .addEventListener("change", (event) => {
-        if (event.matches) {
-          toggle.classList.add(toggledClass);
-        } else {
-          toggle.classList.remove(toggledClass);
-        }
-      });
+    toggleClassName(nextTheme === "dark");
   });
+
+  window
+    .matchMedia("(prefers-color-scheme: dark)")
+    .addEventListener("change", (event) => {
+      toggleClassName(event.matches);
+    });
 </script>
