--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,16 +17,9 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <BaseMeta title={title} description={description} ogImage={ogImage} />
-    <link
-      rel="preload"
-      href="/InterVariable.woff2"
-      type="font/woff2"
-      as="font"
-      crossorigin
-    />
     <ThemeSync />
   </head>
   <body>
