--- a/src/styles/theme-toggler.css
+++ b/src/styles/theme-toggler.css
@@ -3,73 +3,71 @@
   https://github.com/alfiejones/theme-toggles
 */
 
-.theme-toggle.theme-toggle--reversed .theme-toggle__classic {
+.theme-toggle.theme-toggle--reversed .theme-toggle__expand {
   transform: scale(-1, 1);
 }
 
 .theme-toggle {
-  --theme-toggle__classic--duration: 500ms;
+  --theme-toggle__expand--duration: 500ms;
 }
-
-.theme-toggle__classic path {
-  transition-timing-function: cubic-bezier(0, 0, 0.15, 1.25);
+.theme-toggle__expand g circle,
+.theme-toggle__expand g path {
   transform-origin: center;
-  transition-duration: calc(var(--theme-toggle__classic--duration) * 0.8);
+  transition: transform calc(var(--theme-toggle__expand--duration) * 0.65)
+    cubic-bezier(0, 0, 0, 1.25)
+    calc(var(--theme-toggle__expand--duration) * 0.35);
 }
-
-.theme-toggle__classic g path {
-  transition-property: opacity, transform;
-  transition-delay: calc(var(--theme-toggle__classic--duration) * 0.2);
-}
-
-.theme-toggle__classic :first-child path {
+.theme-toggle__expand :first-child path {
   transition-property: transform, d;
+  transition-duration: calc(var(--theme-toggle__expand--duration) * 0.6);
+  transition-timing-function: cubic-bezier(0, 0, 0.5, 1);
 }
 
-.theme-toggle--toggled:not(label).theme-toggle .theme-toggle__classic g path,
-.theme-toggle input[type="checkbox"]:checked ~ .theme-toggle__classic g path {
-  transform: scale(0.5) rotate(45deg);
-  opacity: 0;
+.theme-toggle--toggled:not(label).theme-toggle .theme-toggle__expand g circle,
+.theme-toggle input[type="checkbox"]:checked ~ .theme-toggle__expand g circle {
+  transform: scale(1.4);
   transition-delay: 0s;
 }
-
+.theme-toggle--toggled:not(label).theme-toggle .theme-toggle__expand g path,
+.theme-toggle input[type="checkbox"]:checked ~ .theme-toggle__expand g path {
+  transform: scale(0.75);
+  transition-delay: 0s;
+}
 .theme-toggle--toggled:not(label).theme-toggle
-  .theme-toggle__classic
+  .theme-toggle__expand
   :first-child
   path,
 .theme-toggle
   input[type="checkbox"]:checked
-  ~ .theme-toggle__classic
+  ~ .theme-toggle__expand
   :first-child
   path {
-  d: path("M-12 5h30a1 1 0 0 0 9 13v24h-39Z");
-  transition-delay: calc(var(--theme-toggle__classic--duration) * 0.2);
+  d: path("M-9 3h25a1 1 0 0017 13v30H0Z");
+  transition-delay: calc(var(--theme-toggle__expand--duration) * 0.4);
+  transition-timing-function: cubic-bezier(0, 0, 0, 1.25);
 }
 
 @supports not (d: path("")) {
   .theme-toggle--toggled:not(label).theme-toggle
-    .theme-toggle__classic
+    .theme-toggle__expand
     :first-child
     path,
   .theme-toggle
     input[type="checkbox"]:checked
-    ~ .theme-toggle__classic
+    ~ .theme-toggle__expand
     :first-child
     path {
-    transform: translate3d(-12px, 10px, 0);
+    transform: translate3d(-9px, 14px, 0);
   }
 }
-
 .theme-toggle {
   border: none;
   background: none;
   cursor: pointer;
 }
-
 .theme-toggle input[type="checkbox"] {
   display: none;
 }
-
 .theme-toggle .theme-toggle-sr {
   position: absolute;
   width: 1px;
