--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -3,7 +3,7 @@
     xmlns="http://www.w3.org/2000/svg"
     aria-hidden="true"
     fill="currentColor"
-    class="theme-toggle__expand icon"
+    class="theme-toggle__expand theme-icon"
     viewBox="0 0 32 32"
   >
     <clipPath id="theme-toggle__expand__cutout">
