--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,5 +1,6 @@
 ---
 import FormattedDate from "./FormattedDate.astro";
+import Tags from "./Tags.astro";
 
 export interface Props {
   title: string;
@@ -18,15 +19,7 @@ const { title, link, description, publishDate, tags } = Astro.props;
   </a>
   <div class="post-info">
     {publishDate && <FormattedDate date={publishDate} className="post-date" />}
-    {
-      tags?.length && (
-        <ul class="post-tags">
-          {tags.map((tag) => (
-            <li class="post-tag">{tag}</li>
-          ))}
-        </ul>
-      )
-    }
+    {tags && <Tags tags={tags} className="post-tags" />}
   </div>
 
   {description && <p class="post-description">{description}</p>}
