--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,20 +1,29 @@
 ---
-import { navigationLinks } from "@/website.config";
+interface Item {
+  name: string;
+  path: string;
+}
+
+export interface Props {
+  items: Item[];
+}
+
+const { items } = Astro.props;
 ---
 
 <nav class="navigation" aria-label="Main menu">
   {
-    navigationLinks.map((link) => {
-      const isCurrentPage = Astro.url.pathname === link.path;
+    items.map((item) => {
+      const isCurrentPage = Astro.url.pathname === item.path;
 
       return (
         <a
-          href={link.path}
+          href={item.path}
           class:list={["navigation-link", { active: isCurrentPage }]}
           aria-current={isCurrentPage ? "page" : false}
           data-astro-prefetch
         >
-          {link.name}
+          {item.name}
         </a>
       );
     })
