--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -1,10 +1,10 @@
 <button class="theme-toggle" type="button" aria-label="Toggle theme">
   <svg
     xmlns="http://www.w3.org/2000/svg"
-    aria-hidden="true"
-    fill="currentColor"
-    class="theme-toggle__expand theme-icon"
     viewBox="0 0 32 32"
+    fill="currentColor"
+    class="theme-toggle__expand icon"
+    aria-hidden="true"
   >
     <clipPath id="theme-toggle__expand__cutout">
       <path d="M0-11h25a1 1 0 0017 13v30H0Z"></path>
