--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -7,15 +7,16 @@ export interface Props {
 }
 
 const { date, className } = Astro.props;
+
+const formattedDate = date.toLocaleDateString("en-US", {
+  year: "numeric",
+  month: "short",
+  day: "numeric",
+});
+const dateWithoutTime = date.toISOString().split("T")[0];
 ---
 
-<time class:list={["date", className]} datetime={date.toISOString()}>
-  <Icon icon="date" className="date-icon" />
-  {
-    date.toLocaleDateString("en-US", {
-      year: "numeric",
-      month: "short",
-      day: "numeric",
-    })
-  }
+<time class:list={["date", className]} datetime={dateWithoutTime}>
+  <Icon icon="calendar" />
+  <span>{formattedDate}</span>
 </time>
