--- a/src/components/IconsProvider.astro
+++ b/src/components/IconsProvider.astro
@@ -1,11 +1,13 @@
+---
+// The icons are taken from https://github.com/lucide-icons/lucide
+---
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
   style="display: none"
   aria-hidden="true"
 >
-  <!-- The icons are taken from https://github.com/lucide-icons/lucide -->
-
-  <symbol id="date" viewBox="0 0 24 24">
+  <symbol id="calendar" viewBox="0 0 24 24">
     <path d="M8 2v4"></path>
     <path d="M16 2v4"></path>
     <rect width="18" height="18" x="3" y="4" rx="2"></rect>
@@ -18,11 +20,26 @@
     <path d="M16 18h.01"></path>
   </symbol>
 
-  <symbol id="tags" viewBox="0 0 24 24">
-    <path d="m15 5 6.3 6.3a2.4 2.4 0 0 1 0 3.4L17 19"></path>
+  <symbol id="flask" viewBox="0 0 24 24">
     <path
-      d="M9.586 5.586A2 2 0 0 0 8.172 5H3a1 1 0 0 0-1 1v5.172a2 2 0 0 0 .586 1.414L8.29 18.29a2.426 2.426 0 0 0 3.42 0l3.58-3.58a2.426 2.426 0 0 0 0-3.42z"
+      d="M14 2v6a2 2 0 0 0 .245.96l5.51 10.08A2 2 0 0 1 18 22H6a2 2 0 0 1-1.755-2.96l5.51-10.08A2 2 0 0 0 10 8V2"
     ></path>
-    <circle cx="6.5" cy="9.5" r=".5" fill="currentColor"></circle>
+    <path d="M6.453 15h11.094"></path>
+    <path d="M8.5 2h7"></path>
+  </symbol>
+
+  <symbol id="github" viewBox="0 0 24 24">
+    <path
+      d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
+    ></path>
+    <path d="M9 18c-4.51 2-5-2-7-2"></path>
+  </symbol>
+
+  <symbol id="codepen" viewBox="0 0 24 24">
+    <polygon points="12 2 22 8.5 22 15.5 12 22 2 15.5 2 8.5 12 2"></polygon>
+    <line x1="12" x2="12" y1="22" y2="15.5"></line>
+    <polyline points="22 8.5 12 15.5 2 8.5"></polyline>
+    <polyline points="2 15.5 12 8.5 22 15.5"></polyline>
+    <line x1="12" x2="12" y1="2" y2="8.5"></line>
   </symbol>
 </svg>
