--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,37 +3,46 @@ import { getCollection } from "astro:content";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Post from "@/components/Post.astro";
 
-const projects = await getCollection("projects");
+const [projects, experiments] = await Promise.all([
+  getCollection("projects"),
+  getCollection("experiments"),
+]);
 ---
 
 <BaseLayout title="Personal website">
-  <h1>Hello there 👋</h1>
-  <p>
-    I'm Dmitry, a Frontend Developer with over four years of hands-on
-    experience, passionate about client-side development and the broader
-    JavaScript ecosystem. I am actively seeking opportunities to further enhance
-    my skills and expand my knowledge in this dynamic field
-  </p>
-  <section>
+  <section class="section">
+    <h1>Hello there 👋</h1>
+    <p>
+      I'm Dmitry, a Frontend Developer with over four years of hands-on
+      experience, passionate about client-side development and the broader
+      JavaScript ecosystem. I am actively seeking opportunities to further
+      enhance my skills and expand my knowledge in this dynamic field
+    </p>
+  </section>
+  <section class="section">
     <h2>Projects</h2>
     {
-      projects.length ? (
-        <ul>
-          {projects.map(({ id, data }) => (
-            <li>
-              <Post
-                title={data.title}
-                link={`/projects/${id}`}
-                description={data.description}
-                tags={data.tags}
-                publishDate={data.publishDate}
-              />
-            </li>
-          ))}
-        </ul>
-      ) : (
-        <p>There are no projects yet</p>
-      )
+      projects.map(({ id, data }) => (
+        <Post
+          title={data.title}
+          link={`/projects/${id}`}
+          description={data.description}
+          publishDate={data.publishDate}
+        />
+      ))
+    }
+  </section>
+  <section class="section">
+    <h2>Experiments</h2>
+    {
+      experiments.map(({ id, data }) => (
+        <Post
+          title={data.title}
+          link={`/experiments/${id}`}
+          description={data.description}
+          publishDate={data.publishDate}
+        />
+      ))
     }
   </section>
 </BaseLayout>
