--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -7,7 +7,15 @@
   src: url("/InterVariable.woff2") format("woff2");
 }
 
-:root,
+:root {
+  --size-icons: 1.7rem;
+
+  --text-base: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
+}
+
 :root[data-theme="light"] {
   color-scheme: light;
 
@@ -55,6 +63,22 @@ h1 {
   margin-bottom: 0.75rem;
 }
 
+h2 {
+  font-size: 1.75rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+}
+
 .container {
   width: 50rem;
   max-width: 100%;
@@ -69,6 +93,10 @@ h1 {
   margin-bottom: 3rem;
 }
 
+.section {
+  margin-bottom: 1.75rem;
+}
+
 .navigation {
   display: flex;
   align-items: center;
@@ -79,17 +107,21 @@ h1 {
   text-decoration-line: underline;
 }
 
-.theme-icon,
 .icon {
-  width: 1.7rem;
-  height: 1.7rem;
+  width: var(--size-icons);
+  height: var(--size-icons);
   color: var(--color-icons);
 }
 
-.icon {
+.lucide-icon {
   stroke: currentColor;
   fill: none;
   stroke-width: 2;
   stroke-linecap: round;
   stroke-linejoin: round;
+}
+
+.social-links {
+  display: flex;
+  gap: 0.7rem;
 }
