Update static pages

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,5 +1,5 @@
 ---
-import type { Icons } from "./IconsProvider.astro";
+import type { Icons } from "@/types/common";
 import FormattedDate from "./FormattedDate.astro";
 
 export interface Props {
