--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -1,7 +1,23 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "@/layouts/BaseLayout.astro";
+import SectionLayout from "@/layouts/SectionLayout.astro";
+import Post from "@/components/Post.astro";
+
+const projects = await getCollection("projects");
 ---
 
 <BaseLayout title="Projects">
-  <h1>Projects</h1>
+  <SectionLayout title="Projects" as="h1" icon="atom">
+    {
+      projects.map(({ id, data }) => (
+        <Post
+          title={data.title}
+          link={`/projects/${id}`}
+          description={data.description}
+          publishDate={data.publishDate}
+        />
+      ))
+    }
+  </SectionLayout>
 </BaseLayout>
