--- a/src/components/IconsProvider.astro
+++ b/src/components/IconsProvider.astro
@@ -28,6 +28,16 @@
     <path d="M8.5 2h7"></path>
   </symbol>
 
+  <symbol id="atom" viewBox="0 0 24 24">
+    <circle cx="12" cy="12" r="1"></circle>
+    <path
+      d="M20.2 20.2c2.04-2.03.02-7.36-4.5-11.9-4.54-4.52-9.87-6.54-11.9-4.5-2.04 2.03-.02 7.36 4.5 11.9 4.54 4.52 9.87 6.54 11.9 4.5Z"
+    ></path>
+    <path
+      d="M15.7 15.7c4.52-4.54 6.54-9.87 4.5-11.9-2.03-2.04-7.36-.02-11.9 4.5-4.52 4.54-6.54 9.87-4.5 11.9 2.03 2.04 7.36.02 11.9-4.5Z"
+    ></path>
+  </symbol>
+
   <symbol id="github" viewBox="0 0 24 24">
     <path
       d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
