--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,12 +8,13 @@
 }
 
 :root {
-  --size-icons: 1.7rem;
+  --size-icons-sm: 1.475rem;
+  --size-icons-base: 1.7rem;
 
-  --text-base: 1rem;
-  --text-lg: 1.125rem;
-  --text-xl: 1.25rem;
-  --text-2xl: 1.5rem;
+  --text-sm: 1rem;
+  --text-base: 1.125rem;
+  --text-lg: 1.25rem;
+  --text-xl: 1.5rem;
 }
 
 :root[data-theme="light"] {
@@ -97,6 +98,12 @@ h2 {
   margin-bottom: 1.75rem;
 }
 
+.section-title {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .navigation {
   display: flex;
   align-items: center;
@@ -108,8 +115,8 @@ h2 {
 }
 
 .icon {
-  width: var(--size-icons);
-  height: var(--size-icons);
+  width: var(--size-icons-base);
+  height: var(--size-icons-base);
   color: var(--color-icons);
 }
 
@@ -124,4 +131,43 @@ h2 {
 .social-links {
   display: flex;
   gap: 0.7rem;
+}
+
+.post-title {
+  margin-bottom: 0.2rem;
+}
+
+.post-link {
+  text-decoration-line: underline;
+
+  &:hover {
+    text-decoration-line: none;
+  }
+}
+
+.post-info {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  margin-bottom: 0.4rem;
+  font-size: var(--text-sm);
+  font-weight: 500;
+  color: var(--color-icons);
+}
+
+.post-info .icon {
+  width: var(--size-icons-sm);
+  height: var(--size-icons-sm);
+}
+
+.date {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
